# wrapsire

./: .gitignore  CMakeLists.txt  README.md  main.cpp
examples/: basicuse.cpp  randomagent.cpp
include/: wrapsire.hpp
include/src/: agent.hpp  generation.hpp  rangeview.hpp
include/src/gen1/: battlerby.hpp  pokemonrby.hpp  siderby.hpp
include/src/gen1/agents/: maxdmg.hpp  random.hpp
include/src/gen1/data/: base_stats.hpp  move.hpp  species.hpp  status.hpp  types.hpp
include/src/gen1/samples/: battlesample.hpp  pokesample.hpp  sidesample.hpp
lib/: pkmn-showdown.lib  pkmn.lib
tests/: test.cpp
